--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <header>
     <div class="container flat-menu">
         <div class="first-logo">
-            <img src="img/logo-2.png" alt="Logo">
+            <img src="./img/logo-2.png" alt="Logo">
         </div>
         <div class="main-navigation">
             <ul>
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="second-logo">
-            <img src="img/logo-1.png" alt="Logo">
+            <img src="./img/logo-1.png" alt="Logo">
         </div>
     </div> 
  </header>
