--- a/src/index.html
+++ b/src/index.html
@@ -348,41 +348,74 @@
 
   </div>
 
-  <div class="faq">
-    <div class="faq-item">
-      <input class="faq-input" type="checkbox" id="faq_1">
-      <label class="faq-title" for="faq_1"><span class="name">Банк (часть1)</span> <span class="data"> 12 августа</span>
-        <span class="time">11:00 </span></label>
-
-      <div class="faq-text">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores eum, ipsum. Voluptatum deleniti ut ipsa
-          blanditiis, modi facere distinctio impedit illum fugiat ex vel, quasi sit, explicabo veniam nemo
-          reprehenderit!</p>
+  <!-- аккордеон -->
+<div class="accordion">
+  <ul>
+    <li>
+      <div class="acc-banner">
+        <span> Банк и деньги (часть 1) </span>
+        <span class="data">12 января</span>
+        <span>11:00</span>
+        <button class="open"> Подробнее</button>
       </div>
-    </div>
-
-    <div class="faq-item">
-      <input class="faq-input" type="checkbox" id="faq_2">
-      <label class="faq-title" for="faq_2"><span class="name">Банк (часть1)</span> <span class="data"> 12 августа</span>
-        <span class="time">11:00 </span></label>
-      <div class="faq-text">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores eum, ipsum. Voluptatum deleniti ut ipsa
-          blanditiis, modi facere distinctio impedit illum fugiat ex vel, quasi sit, explicabo veniam nemo
-          reprehenderit!</p>
+      <div class="acc-content">
+        <p class="acc-tit">Место проведения:</p>
+        <p class="acc-text">«Руденская вспомогательная школа-интернат», г.п. Руденск.</p>
+        <p class="acc-tit">Целевая аудитория:</p>
+        <p class="acc-text">9, 10, 12 класс (42 человека) </p>
+        <p class="acc-tit"> Цель занятия:</p>
+        <p class="acc-text">Формирование основ финансовой грамотности у детей-сирот с интеллектуальной недостаточностью.</p>
+        <p class="acc-tit"> Задачи:</p>
+        <p class="acc-text">Познакомить детей с понятиями «деньги», «купюра», «монеты», «банк», «бюджет», «расходы», «доходы»; объяснить необходимость и возможность покупки того или иного товара; воспитать правильное отношение к деньгам.</p>
+        <p class="acc-description"> ОПИСАНИЕ:</p>
+        <p class="acc-text">Теоретическая часть — презентация, подготовленная командой «Мы рядом». Проверка полученных знаний в конце занятия — тест по пройденному материалу.</p>
+      <button><img src="./images/close.png"></button>
       </div>
-    </div>
-    <div class="faq-item">
-      <input class="faq-input" type="checkbox" id="faq_3">
-      <label class="faq-title" for="faq_3"><span class="name">Банк (часть1)</span> <span class="data"> 12 августа</span>
-        <span class="time">11:00 </span></label>
-      <div class="faq-text">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores eum, ipsum. Voluptatum deleniti ut ipsa
-          blanditiis, modi facere distinctio impedit illum fugiat ex vel, quasi sit, explicabo veniam nemo
-          reprehenderit!</p>
+    </li>
+    <li>
+      <div class="acc-banner">
+        <span> Банк и деньги (часть 1) </span>
+        <span class="data">12 января</span>
+        <span>11:00</span>
+        <button class="open"> Подробнее</button>
       </div>
-    </div>
-  </div>
-
+      <div class="acc-content">
+        <p class="acc-tit">Место проведения:</p>
+        <p class="acc-text">«Руденская вспомогательная школа-интернат», г.п. Руденск.</p>
+        <p class="acc-tit">Целевая аудитория:</p>
+        <p class="acc-text">9, 10, 12 класс (42 человека) </p>
+        <p class="acc-tit"> Цель занятия:</p>
+        <p class="acc-text">Формирование основ финансовой грамотности у детей-сирот с интеллектуальной недостаточностью.</p>
+        <p class="acc-tit"> Задачи:</p>
+        <p class="acc-text">Познакомить детей с понятиями «деньги», «купюра», «монеты», «банк», «бюджет», «расходы», «доходы»; объяснить необходимость и возможность покупки того или иного товара; воспитать правильное отношение к деньгам.</p>
+        <p class="acc-description"> ОПИСАНИЕ:</p>
+        <p class="acc-text">Теоретическая часть — презентация, подготовленная командой «Мы рядом». Проверка полученных знаний в конце занятия — тест по пройденному материалу.</p>
+      <button><img src="./images/close.png"></button>
+      </div>
+    </li>
+    <li>
+      <div class="acc-banner">
+        <span> Банк и деньги (часть 1) </span>
+        <span class="data">12 января</span>
+        <span>11:00</span>
+        <button class="open"> Подробнее</button>
+      </div>
+      <div class="acc-content">
+        <p class="acc-tit">Место проведения:</p>
+        <p class="acc-text">«Руденская вспомогательная школа-интернат», г.п. Руденск.</p>
+        <p class="acc-tit">Целевая аудитория:</p>
+        <p class="acc-text">9, 10, 12 класс (42 человека) </p>
+        <p class="acc-tit"> Цель занятия:</p>
+        <p class="acc-text">Формирование основ финансовой грамотности у детей-сирот с интеллектуальной недостаточностью.</p>
+        <p class="acc-tit"> Задачи:</p>
+        <p class="acc-text">Познакомить детей с понятиями «деньги», «купюра», «монеты», «банк», «бюджет», «расходы», «доходы»; объяснить необходимость и возможность покупки того или иного товара; воспитать правильное отношение к деньгам.</p>
+        <p class="acc-description"> ОПИСАНИЕ:</p>
+        <p class="acc-text">Теоретическая часть — презентация, подготовленная командой «Мы рядом». Проверка полученных знаний в конце занятия — тест по пройденному материалу.</p>
+      <button><img src="./images/close.png"></button>
+      </div>
+    </li>
+  </ul>
+</div>
 </section>
 <section class="news">
   <div class="heading-news">
