--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,6 @@
         <img src="./images/logo-2.png" alt="Logo">
       </div>
       <div class="bg">
-        <!-- <img src="./images/bg-up.png"> -->
       </div>
       <div class="main-navigation">
         <ul>
@@ -39,7 +38,10 @@
       </div>
     </div>
   </header>
-  <section class="base">
+ 
+</section>
+<section class="wrapper-base">
+  <div class="base">
     <div class="base-caption">
       <div class="caption">
         <h1>Образовательный проект</h1>
@@ -71,12 +73,13 @@
       <div class="form">
         <div class="form-head">
           <h2>Пожертвовать</h2>
-          <img src="images/visa.png" alt="visa">
+          <div class="card-icon">
+            <img src="images/mastercard.png" alt="mastercard">
+            <img src="images/visa.png" alt="visa">
+          </div>
         </div>
         <ul class="tab-group">
-          <!--href="#signup"-->
           <li class="tab active"><a>Сумма</a></li>
-          <!--#login-->
           <li class="tab"><a>Другая сумма</a></li>
         </ul>
 
@@ -85,40 +88,25 @@
 
             <form action="/" method="post" class="form-signup">
               <div class="field-wrap">
-                <label>
-                  Назначение платежа<span class="req">*</span>
-                </label>
-                <input type="email" required autocomplete="off" name="email"/>
+                <input type="email" required autocomplete="off" name="email" placeholder="Назначение платежа*"/>
               </div>
 
               <div class="top-row">
                 <div class="field-wrap">
-                  <label>
-                    Имя<span class="req">*</span>
-                  </label>
-                  <input type="text" required autocomplete="off"/>
+                  <input type="text" required autocomplete="off" placeholder="Имя*"/>
                 </div>
 
                 <div class="field-wrap">
-                  <label>
-                    Фамилия<span class="req">*</span>
-                  </label>
-                  <input type="text" required autocomplete="off"/>
+                  <input type="text" required autocomplete="off" placeholder="Фамилия*"/>
                 </div>
               </div>
 
               <div class="field-wrap">
-                <label>
-                  E-mail<span class="req">*</span>
-                </label>
-                <input type="email" required autocomplete="off"/>
+                <input type="email" required autocomplete="off" placeholder="E-mail*"/>
               </div>
 
               <div class="field-wrap">
-                <label>
-                  Телефон<span class="req">*</span>
-                </label>
-                <input type="password" required autocomplete="off"/>
+                <input type="password" required autocomplete="off" placeholder="Телефон*"/>
               </div>
 
               <button type="submit" class="button button-block">Помочь</button>
@@ -132,17 +120,17 @@
             <form action="/" method="post">
 
               <div class="field-wrap">
-                <label>
+                <!-- <label>
                   E-mail<span class="req">*</span>
-                </label>
-                <input type="email" required autocomplete="off"/>
+                </label> -->
+                <input type="email" required autocomplete="off" placeholder="E-mail*"/>
               </div>
 
               <div class="field-wrap">
-                <label>
+                <!-- <label>
                   Телефон<span class="req">*</span>
-                </label>
-                <input type="password" required autocomplete="off"/>
+                </label> -->
+                <input type="password" required autocomplete="off" placeholder="Телефон*"/>
               </div>
 
 
@@ -182,10 +170,8 @@
         </div> -->
       </div>
     </div>
-
-  </section>
+</div>
 </section>
-
 <section class="wr-doing">
   <div class="heading-doing">
     <h1>Что мы делаем?</h1>
