--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
       </div>
     </div>
   </header>
- 
+
 </section>
 <section class="wrapper-base">
   <div class="base">
@@ -326,82 +326,95 @@
 </section>
 
 <section class="event">
-  <div class="heading-event">
-    <h1>Ближайшие события</h1>
-    <div class="bg-event">
-      <img src="./images/bg-event.png">
+  <div class="container">
+    <div class="heading-event">
+      <h1>Ближайшие события</h1>
+      <div class="bg-event">
+        <img src="./images/bg-event.png">
+      </div>
+
     </div>
 
-  </div>
+    <!-- аккордеон -->
 
-  <!-- аккордеон -->
-<div class="accordion">
-  <ul>
-    <li>
-      <div class="acc-banner">
-        <span> Банк и деньги (часть 1) </span>
-        <span class="data">12 января</span>
-        <span>11:00</span>
-        <button class="open"> Подробнее</button>
-      </div>
-      <div class="acc-content">
-        <p class="acc-tit">Место проведения:</p>
-        <p class="acc-text">«Руденская вспомогательная школа-интернат», г.п. Руденск.</p>
-        <p class="acc-tit">Целевая аудитория:</p>
-        <p class="acc-text">9, 10, 12 класс (42 человека) </p>
-        <p class="acc-tit"> Цель занятия:</p>
-        <p class="acc-text">Формирование основ финансовой грамотности у детей-сирот с интеллектуальной недостаточностью.</p>
-        <p class="acc-tit"> Задачи:</p>
-        <p class="acc-text">Познакомить детей с понятиями «деньги», «купюра», «монеты», «банк», «бюджет», «расходы», «доходы»; объяснить необходимость и возможность покупки того или иного товара; воспитать правильное отношение к деньгам.</p>
-        <p class="acc-description"> ОПИСАНИЕ:</p>
-        <p class="acc-text">Теоретическая часть — презентация, подготовленная командой «Мы рядом». Проверка полученных знаний в конце занятия — тест по пройденному материалу.</p>
-      <button><img src="./images/close.png"></button>
-      </div>
-    </li>
-    <li>
-      <div class="acc-banner">
-        <span> Банк и деньги (часть 1) </span>
-        <span class="data">12 января</span>
-        <span>11:00</span>
-        <button class="open"> Подробнее</button>
-      </div>
-      <div class="acc-content">
-        <p class="acc-tit">Место проведения:</p>
-        <p class="acc-text">«Руденская вспомогательная школа-интернат», г.п. Руденск.</p>
-        <p class="acc-tit">Целевая аудитория:</p>
-        <p class="acc-text">9, 10, 12 класс (42 человека) </p>
-        <p class="acc-tit"> Цель занятия:</p>
-        <p class="acc-text">Формирование основ финансовой грамотности у детей-сирот с интеллектуальной недостаточностью.</p>
-        <p class="acc-tit"> Задачи:</p>
-        <p class="acc-text">Познакомить детей с понятиями «деньги», «купюра», «монеты», «банк», «бюджет», «расходы», «доходы»; объяснить необходимость и возможность покупки того или иного товара; воспитать правильное отношение к деньгам.</p>
-        <p class="acc-description"> ОПИСАНИЕ:</p>
-        <p class="acc-text">Теоретическая часть — презентация, подготовленная командой «Мы рядом». Проверка полученных знаний в конце занятия — тест по пройденному материалу.</p>
-      <button><img src="./images/close.png"></button>
-      </div>
-    </li>
-    <li>
-      <div class="acc-banner">
-        <span> Банк и деньги (часть 1) </span>
-        <span class="data">12 января</span>
-        <span>11:00</span>
-        <button class="open"> Подробнее</button>
-      </div>
-      <div class="acc-content">
-        <p class="acc-tit">Место проведения:</p>
-        <p class="acc-text">«Руденская вспомогательная школа-интернат», г.п. Руденск.</p>
-        <p class="acc-tit">Целевая аудитория:</p>
-        <p class="acc-text">9, 10, 12 класс (42 человека) </p>
-        <p class="acc-tit"> Цель занятия:</p>
-        <p class="acc-text">Формирование основ финансовой грамотности у детей-сирот с интеллектуальной недостаточностью.</p>
-        <p class="acc-tit"> Задачи:</p>
-        <p class="acc-text">Познакомить детей с понятиями «деньги», «купюра», «монеты», «банк», «бюджет», «расходы», «доходы»; объяснить необходимость и возможность покупки того или иного товара; воспитать правильное отношение к деньгам.</p>
-        <p class="acc-description"> ОПИСАНИЕ:</p>
-        <p class="acc-text">Теоретическая часть — презентация, подготовленная командой «Мы рядом». Проверка полученных знаний в конце занятия — тест по пройденному материалу.</p>
-      <button><img src="./images/close.png"></button>
-      </div>
-    </li>
-  </ul>
-</div>
+    <ul class="accordion">
+      <li class="accordion-item">
+        <div class="acc-banner">
+          <span> Банк и деньги (часть 1) </span>
+          <span class="data">12 января</span>
+          <span>11:00</span>
+          <button class="toggle"> Подробнее</button>
+        </div>
+        <div class="acc-content">
+          <p class="acc-tit">Место проведения:</p>
+          <p class="acc-text">«Руденская вспомогательная школа-интернат», г.п. Руденск.</p>
+          <p class="acc-tit">Целевая аудитория:</p>
+          <p class="acc-text">9, 10, 12 класс (42 человека) </p>
+          <p class="acc-tit"> Цель занятия:</p>
+          <p class="acc-text">Формирование основ финансовой грамотности у детей-сирот с интеллектуальной
+            недостаточностью.</p>
+          <p class="acc-tit"> Задачи:</p>
+          <p class="acc-text">Познакомить детей с понятиями «деньги», «купюра», «монеты», «банк», «бюджет», «расходы»,
+            «доходы»; объяснить необходимость и возможность покупки того или иного товара; воспитать правильное
+            отношение к деньгам.</p>
+          <p class="acc-description"> ОПИСАНИЕ:</p>
+          <p class="acc-text">Теоретическая часть — презентация, подготовленная командой «Мы рядом». Проверка полученных
+            знаний в конце занятия — тест по пройденному материалу.</p>
+          <button class="toggle"><img src="./images/close.png"></button>
+        </div>
+      </li>
+      <li class="accordion-item">
+        <div class="acc-banner">
+          <span> Банк и деньги (часть 1) </span>
+          <span class="data">12 января</span>
+          <span>11:00</span>
+          <button class="toggle"> Подробнее</button>
+        </div>
+        <div class="acc-content">
+          <p class="acc-tit">Место проведения:</p>
+          <p class="acc-text">«Руденская вспомогательная школа-интернат», г.п. Руденск.</p>
+          <p class="acc-tit">Целевая аудитория:</p>
+          <p class="acc-text">9, 10, 12 класс (42 человека) </p>
+          <p class="acc-tit"> Цель занятия:</p>
+          <p class="acc-text">Формирование основ финансовой грамотности у детей-сирот с интеллектуальной
+            недостаточностью.</p>
+          <p class="acc-tit"> Задачи:</p>
+          <p class="acc-text">Познакомить детей с понятиями «деньги», «купюра», «монеты», «банк», «бюджет», «расходы»,
+            «доходы»; объяснить необходимость и возможность покупки того или иного товара; воспитать правильное
+            отношение к деньгам.</p>
+          <p class="acc-description"> ОПИСАНИЕ:</p>
+          <p class="acc-text">Теоретическая часть — презентация, подготовленная командой «Мы рядом». Проверка полученных
+            знаний в конце занятия — тест по пройденному материалу.</p>
+          <button class="toggle"><img src="./images/close.png"></button>
+        </div>
+      </li>
+      <li class="accordion-item">
+        <div class="acc-banner">
+          <span> Банк и деньги (часть 1) </span>
+          <span class="data">12 января</span>
+          <span>11:00</span>
+          <button class="toggle"> Подробнее</button>
+        </div>
+        <div class="acc-content">
+          <p class="acc-tit">Место проведения:</p>
+          <p class="acc-text">«Руденская вспомогательная школа-интернат», г.п. Руденск.</p>
+          <p class="acc-tit">Целевая аудитория:</p>
+          <p class="acc-text">9, 10, 12 класс (42 человека) </p>
+          <p class="acc-tit"> Цель занятия:</p>
+          <p class="acc-text">Формирование основ финансовой грамотности у детей-сирот с интеллектуальной
+            недостаточностью.</p>
+          <p class="acc-tit"> Задачи:</p>
+          <p class="acc-text">Познакомить детей с понятиями «деньги», «купюра», «монеты», «банк», «бюджет», «расходы»,
+            «доходы»; объяснить необходимость и возможность покупки того или иного товара; воспитать правильное
+            отношение к деньгам.</p>
+          <p class="acc-description"> ОПИСАНИЕ:</p>
+          <p class="acc-text">Теоретическая часть — презентация, подготовленная командой «Мы рядом». Проверка полученных
+            знаний в конце занятия — тест по пройденному материалу.</p>
+          <button class="toggle"><img src="./images/close.png"></button>
+        </div>
+      </li>
+    </ul>
+  </div>
 </section>
 <section class="news">
   <div class="heading-news">
