--- a/src/about.html
+++ b/src/about.html
@@ -36,9 +36,9 @@
       </header>
 
       <section class="project-history">
-        <div class="heading-history">
-            <h1>Как родился проект </h1>
-             <img class="bg-heading" src="./images/bg-event.png"> 
+        <div class="heading history">
+            <h2>Как родился проект </h2>
+              
         </div>
         <div class="content">
             <div class="history-content-1">
@@ -142,8 +142,7 @@
 
       <section class="founders">
         <div class="heading-founders">
-            <h1>Наша команда </h1>
-             <img class="bg-heading" src="./images/bg-event.png"> 
+            <h2>Наша команда </h2>     
         </div>
         <div class="wr-founders">
             <div class="photo">
@@ -266,9 +265,9 @@
 
       <section class="foother">
 
-        <div class="heading-foother">
-          <h1>Контакты </h1>
-          <img class="bg-heading" src="./images/bg-event.png">
+        <div class="heading-second">
+          <h2>Контакты </h2>
+          
         </div>
         <div class="foother-content">
           <div class="unit-1">
