--- a/src/contacts.html
+++ b/src/contacts.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="wr-header">
+    <section class="wrapper-header">
         <header>
           <div class="container flat-menu">
             <div class="first-logo">
@@ -39,9 +39,9 @@
     
     <section class="foother">
 
-        <div class="heading-foother">
-          <h1>Контакты </h1>
-          <img class="bg-heading" src="./images/bg-event.png">
+        <div class="heading-second">
+          <h2>Контакты </h2>
+          
         </div>
         <div class="foother-content">
           <div class="unit-1">
