--- a/src/about.html
+++ b/src/about.html
@@ -263,7 +263,7 @@
         </div>
       </section>
 
-      <section class="foother">
+      <section class="wrapper-foother">
 
         <div class="heading-second">
           <h2>Контакты </h2>
