--- a/src/event.html
+++ b/src/event.html
@@ -324,7 +324,7 @@
           </ul>
         </div>
       </section>
-    <section class="foother">
+    <section class="wrapper-foother">
 
         <div class="heading-second">
           <h2>Контакты </h2>
