--- a/src/contacts.html
+++ b/src/contacts.html
@@ -37,7 +37,7 @@
       
     </section>
     
-    <section class="foother">
+    <section class="wrapper-foother">
 
         <div class="heading-second">
           <h2>Контакты </h2>
