--- a/src/index.html
+++ b/src/index.html
@@ -169,7 +169,7 @@
 </div>
 </section>
 <!-- "что мы делаем?" -->
-<section class="wr-doing">
+<section class="wrapper-doing">
   <div class="heading doing">
     <h2>Что мы делаем?</h2>
   </div>
@@ -228,7 +228,7 @@
   </div>
 </section>
 <!-- команда -->
-<section class="team">
+<section class="wrapper-team">
   <div class="heading-team">
     <h2>Наша команда</h2>
   </div>
@@ -317,11 +317,10 @@
 
 </section>
 <!-- мероприятия  -->
-<section class="event">
+<section class="wrapper-event">
   <div class="container">
     <div class="heading-event">
       <h2>Ближайшие события</h2>
-      
     </div>
 
     <!-- аккордеон -->
@@ -409,7 +408,7 @@
   </div>
 </section>
 <!-- новости instagram -->
-<section class="news">
+<section class="wrapper-news">
   <div class="heading-second">
     <h2>Новости</h2>
  
@@ -482,7 +481,7 @@
 
 </section>
 <!-- контакты -->
-<section class="foother">
+<section class="wrapper-foother">
 
   <div class="heading-second">
     <h2>Контакты </h2>
