--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,17 @@
         <div class="first-logo">
           <img src="./images/logo-2.png" alt="Logo">
         </div>
+        <!-- <input  id="nav-toggle" class="nav-toggle" type="checkbox"/>
+<label class="nav-toggle-label" for="nav-toggle" >
+	  <span class="burger__line burger__line--one"></span>
+    <span class="burger__line burger__line--two"></span>
+    <span class="burger__line burger__line--tree"></span>
+</label> -->
       <div class="main-navigation">
         <ul>
-          <li><a href="about.html">о нас</a></li>
-          <li><a href="event.html">тренинги</a></li>
-          <li><a href="contacts.html">контакты</a></li>
+          <li><a class="main-menu__link" href="about.html">о нас</a></li>
+          <li><a class="main-menu__link" href="event.html">тренинги</a></li>
+          <li><a class="main-menu__link" href="contacts.html">контакты</a></li>
         </ul>
       </div>
       <div class="contacts">
@@ -72,7 +78,7 @@
     <div class="form-pay">
       <div class="form">
         <div class="form-head">
-          <h2>Пожертвовать</h2>
+          <h4>Пожертвовать</h4>
           <div class="card-icon">
             <img src="images/mastercard.png" alt="mastercard">
             <img src="images/visa.png" alt="visa">
@@ -330,7 +336,7 @@
         <div class="acc-banner">
           <span> Банк и деньги (часть 1) </span>
           <span class="data">12 января</span>
-          <span>11:00</span>
+          <span class="time">11:00</span>
           <button class="toggle"> Подробнее</button>
         </div>
         <div class="acc-content">
@@ -355,7 +361,7 @@
         <div class="acc-banner">
           <span> Банк и деньги (часть 1) </span>
           <span class="data">12 января</span>
-          <span>11:00</span>
+          <span class="time">11:00</span>
           <button class="toggle"> Подробнее</button>
         </div>
         <div class="acc-content">
@@ -380,7 +386,7 @@
         <div class="acc-banner">
           <span> Банк и деньги (часть 1) </span>
           <span class="data">12 января</span>
-          <span>11:00</span>
+          <span class="time">11:00</span>
           <button class="toggle"> Подробнее</button>
         </div>
         <div class="acc-content">
