--- a/src/index.html
+++ b/src/index.html
@@ -170,7 +170,7 @@
         </div> -->
       </div>
     </div>
-</div>
+  </div>
 </section>
 <section class="wr-doing">
   <div class="heading-doing">
@@ -324,7 +324,6 @@
     </svg> -->
 
 </section>
-
 <section class="event">
   <div class="container">
     <div class="heading-event">
@@ -334,10 +333,7 @@
       </div>
 
     </div>
-
-    <!-- аккордеон -->
-
-    <ul class="accordion">
+    <ul class="accordion" >
       <li class="accordion-item">
         <div class="acc-banner">
           <span> Банк и деньги (часть 1) </span>
@@ -360,7 +356,7 @@
           <p class="acc-description"> ОПИСАНИЕ:</p>
           <p class="acc-text">Теоретическая часть — презентация, подготовленная командой «Мы рядом». Проверка полученных
             знаний в конце занятия — тест по пройденному материалу.</p>
-          <button class="toggle"><img src="./images/close.png"></button>
+          <button class="toggle"><img src="./images/сlose.png"/></button>
         </div>
       </li>
       <li class="accordion-item">
@@ -385,7 +381,7 @@
           <p class="acc-description"> ОПИСАНИЕ:</p>
           <p class="acc-text">Теоретическая часть — презентация, подготовленная командой «Мы рядом». Проверка полученных
             знаний в конце занятия — тест по пройденному материалу.</p>
-          <button class="toggle"><img src="./images/close.png"></button>
+          <button class="toggle"><img src="images/spot6.png"></button>
         </div>
       </li>
       <li class="accordion-item">
@@ -410,10 +406,29 @@
           <p class="acc-description"> ОПИСАНИЕ:</p>
           <p class="acc-text">Теоретическая часть — презентация, подготовленная командой «Мы рядом». Проверка полученных
             знаний в конце занятия — тест по пройденному материалу.</p>
-          <button class="toggle"><img src="./images/close.png"></button>
+          <button class="toggle"><img src="images/spot6.png"></button>
         </div>
       </li>
     </ul>
+    <div id="accordion">
+      <h3>Section 1</h3>
+      <div>
+        <p>
+          Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
+          ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
+          amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
+          odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
+        </p>
+      </div>
+      <h3>Section 2</h3>
+      <div>
+        <p>
+          Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet
+          purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor
+          velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In
+          suscipit faucibus urna.
+        </p>
+      </div>
   </div>
 </section>
 <section class="news">
@@ -548,7 +563,6 @@
   </div>
 
 </section>
-
 </body>
 
 </html>
