feat: some feature

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-
+ 
   <title>The step</title>
 </head>
 
@@ -144,7 +144,7 @@
               </div>
 
 
-              <button type="submit" class="button button-block">Помочь</button>
+              <button type="submit" class="button button-block"><a href="firstmodal.html"></a>Помочь</button>
 
             </form>
 
@@ -478,6 +478,85 @@
       </div>
     </div>
   </div>
+  <!-- <div id="portfolio" class="portfolio">
+    <div class="container">
+        <h2>Портфолио</h2>
+        <div class="underline"></div>
+        <ul class="portfolio-content" id="all-progects">
+            <li class="portfolio-item portfolio-item-active">
+              <div class="instagram-1">
+                <div class="foto">
+                  <img src="./images/anatoly-team.png" alt="picture">
+                </div>
+                <div class="contents">
+                  <div class="logo-instagram">
+                    <img src="./images/logo-instagram.png" alt="logo">
+                  </div>
+                  <div class="text-content">
+                    <h4>mi.ryadom &bull; <a href="https://www.instagram.com/mi.ryadom">Подписаться</a></h4>
+                    <p>Первый образовательный <br>
+                      проект "Шаг вперёд". Что <br>
+                      мы делаем? &#9989;...</p>
+                  </div>
+                </div>
+                <div class="btn-details">
+                  <button>Подробнее</button>
+                </div>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <div class="instagram-2">
+                <div class="foto">
+                  <img src="./images/anatoly-team.png" alt="picture">
+                </div>
+                <div class="contents">
+                  <div class="logo-instagram">
+                    <img src="./images/logo-instagram.png" alt="logo">
+                  </div>
+                  <div class="text-content">
+                    <h4>mi.ryadom &bull; <a href="https://www.instagram.com/mi.ryadom">Подписаться</a></h4>
+                    <p>Первый образовательный <br>
+                      проект "Шаг вперёд". Что <br>
+                      мы делаем? &#9989;...</p>
+                  </div>
+                </div>
+                <div class="btn-details">
+                  <button>Подробнее</button>
+                </div>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <div class="instagram-3">
+                <div class="foto">
+                  <img src="./images/anatoly-team.png" alt="picture">
+                </div>
+                <div class="contents">
+                  <div class="logo-instagram">
+                    <img src="./images/logo-instagram.png" alt="logo">
+                  </div>
+                  <div class="text-content">
+                    <h4>mi.ryadom &bull; <a href="https://www.instagram.com/mi.ryadom">Подписаться</a></h4>
+                    <p>Первый образовательный <br>
+                      проект "Шаг вперёд". Что <br>
+                      мы делаем? &#9989;...</p>
+                  </div>
+                </div>
+                <div class="btn-details">
+                  <button>Подробнее</button>
+                </div>
+              </div>
+            </li>
+            
+            <a href="#" class="portfolio-btn prev" id="arrow-left"></a>
+            <a href="#" class="portfolio-btn next" id="arrow-right"></a>
+            <ul class="portfolio-dots">
+                <li class="dot dot-active"></li>
+                <li class="dot"></li>
+                <li class="dot"></li>
+            </ul>
+        </ul>
+    </div>
+</div> -->
 
   <div class="all-news">
     <a href="#">Все новости</a>
@@ -542,6 +621,7 @@
   </div>
 
 </section>
+
 </body>
 
 </html>
