--- a/src/index.html
+++ b/src/index.html
@@ -17,19 +17,6 @@
       <div class="first-logo">
         <img src="./images/logo-2.png" alt="Logo">
       </div>
-
-      <!--<div class="hamburger-menu">
-        <input id="menu__toggle" type="checkbox" />
-        <label class="menu__btn" for="menu__toggle">
-          <span></span>
-        </label>
-
-        <ul class="menu__box">
-          <li><a class="menu__item" href="#">о нас</a></li>
-          <li><a class="menu__item" href="#">тренинги</a></li>
-          <li><a class="menu__item" href="#">контакты</a></li>
-        </ul>
-      </div>-->
       <div class="hamburglar is-closed" id="hamburger">
         <div class="burger-icon">
           <div class="burger-container"><span class="burger-bun-top"></span><span class="burger-filling"></span><span class="burger-bun-bot"></span></div>
@@ -70,46 +57,14 @@
       </div>
 
 
-     <!-- <nav>
-        <ul class="nav-menu">
-          <li class="active"><a href="#wr-header">home</a></li>
-          <li><a href="#wr-intro">about</a></li>
-          <li><a href="#wr-portfolio">stories</a></li>
-          <li><a href="#wr-clients">clients</a></li>
-        </ul>
-        <div class="hamburglar is-closed" id="hamburger">
-          <div class="burger-icon">
-            <div class="burger-container"><span class="burger-bun-top"></span><span class="burger-filling"></span><span class="burger-bun-bot"></span></div>
-          </div>
-          <div class="burger-ring">
-            <svg class="svg-ring" viewBox="0 0 70 70">
-              <path class="path" fill="none" stroke="#000" stroke-miterlimit="10" stroke-width="4" d="M 35 2 C 16.3 2 2 16.3 2 34 s 14.3 32 32 32 s 32 -14.3 32 -32 S 51.7 2 34 2"></path>
-            </svg>
-          </div>
-          <svg width="0" height="0" viewBox="0 0 70 70">
-            <mask id="mask">
-              <path xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#000000" stroke-miterlimit="10" stroke-width="4" d="M 34 2 c 11.6 0 21.8 6.2 27.4 15.5 c 2.9 4.8 5 16.5 -9.4 16.5 h -4"></path>
-            </mask>
-          </svg>
-          <div class="path-burger">
-            <div class="animate-path">
-              <div class="path-rotation"></div>
-            </div>
-          </div>
-        </div>
-      </nav>-->
-
-
     </div>
   </header>
   <div class="container">
     <nav class="nav-modal">
       <ul>
-        <li class="active"><a href="#wr-header">home</a></li>
-        <li><a href="#wr-intro">about</a></li>
-        <li><a href="#wr-portfolio">stories</a></li>
-        <li><a href="#wr-clients">clients</a></li>
-        <li><a href="#wr-team-members">Team Members</a></li>
+        <li class="active"><a href="about.html">о нас</a></li>
+        <li><a href="event.html">тренинги</a></li>
+        <li><a href="contacts.html">контакты</a></li>
       </ul>
     </nav>
   </div>
@@ -546,7 +501,65 @@
       </div>
     </div>
   </div>
-
+  <!-- <div class="slider single-item">
+    <div class="instagram-1">
+      <div class="foto">
+        <img src="./images/anatoly-team.png" alt="picture">
+      </div>
+      <div class="contents">
+        <div class="logo-instagram">
+          <img src="./images/logo-instagram.png" alt="logo">
+        </div>
+        <div class="text-content">
+          <h4>mi.ryadom &bull; <a href="https://www.instagram.com/mi.ryadom">Подписаться</a></h4>
+          <p>Первый образовательный <br>
+            проект "Шаг вперёд". Что <br>
+            мы делаем? &#9989;...</p>
+        </div>
+      </div>
+      <div class="btn-details">
+        <button>Подробнее</button>
+      </div>
+    </div>
+    <div class="instagram-2">
+      <div class="foto">
+        <img src="./images/anatoly-team.png" alt="picture">
+      </div>
+      <div class="contents">
+        <div class="logo-instagram">
+          <img src="./images/logo-instagram.png" alt="logo">
+        </div>
+        <div class="text-content">
+          <h4>mi.ryadom &bull; <a href="https://www.instagram.com/mi.ryadom">Подписаться</a></h4>
+          <p>Первый образовательный <br>
+            проект "Шаг вперёд". Что <br>
+            мы делаем? &#9989;...</p>
+        </div>
+      </div>
+      <div class="btn-details">
+        <button>Подробнее</button>
+      </div>
+    </div>
+    <div class="instagram-3">
+      <div class="foto">
+        <img src="./images/anatoly-team.png" alt="picture">
+      </div>
+      <div class="contents">
+        <div class="logo-instagram">
+          <img src="./images/logo-instagram.png" alt="logo">
+        </div>
+        <div class="text-content">
+          <h4>mi.ryadom &bull; <a href="https://www.instagram.com/mi.ryadom">Подписаться</a></h4>
+          <p>Первый образовательный <br>
+            проект "Шаг вперёд". Что <br>
+            мы делаем? &#9989;...</p>
+        </div>
+      </div>
+      <div class="btn-details">
+        <button>Подробнее</button>
+      </div>
+    </div>
+  </div> -->
 
   <div class="all-news">
     <a href="#">Все новости</a>
