--- a/src/about.html
+++ b/src/about.html
@@ -50,16 +50,17 @@
                 <img src="./images/logo-1.png" alt="Logo">
             </div>
         </div> 
-        <div class="container">
-            <nav class="nav-modal">
-              <ul>
-                <li class="active"><a href="about.html">о нас</a></li>
-                <li><a href="event.html">тренинги</a></li>
-                <li><a href="contacts.html">контакты</a></li>
-              </ul>
-            </nav>
+       
       </header>
-
+      <div class="container">
+        <nav class="nav-modal">
+          <ul>
+            <li class="active"><a href="index.html">главная</a></li>
+            <li><a href="event.html">тренинги</a></li>
+            <li><a href="contacts.html">контакты</a></li>
+          </ul>
+        </nav>
+      </div>
       <section class="project-history">
         <div class="heading history">
             <h2>Как родился проект </h2>
