--- a/src/event.html
+++ b/src/event.html
@@ -55,8 +55,8 @@
         <div class="container">
           <nav class="nav-modal">
             <ul>
+              <li><a href="index.html">главная</a></li>
               <li class="active"><a href="about.html">о нас</a></li>
-              <li><a href="event.html">тренинги</a></li>
               <li><a href="contacts.html">контакты</a></li>
             </ul>
           </nav>
